[project]
name = "transit-system-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "black>=25.9.0",
    "faker>=37.12.0",
    "fastapi[standard]>=0.120.0",
    "flake8>=7.3.0",
    "geopy>=2.4.1",
    "httpx>=0.28.1",
    "isort>=7.0.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "mypy>=1.18.2",
    "numpy>=2.3.4",
    "orjson>=3.11.4",
    "pandas>=2.3.3",
    "pre-commit>=4.3.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
    "websockets>=15.0.1",
]
